# DealScout

./: .env.example  .gitignore  README.md  llm.py  pyproject.toml  requirements.txt  run.sh  serve_api.py  serve_ui.py  streamlit_app.py
agents/: coordinator.py  graph.py  normalizer.py  query_parse.py  ranker.py  scorer.py  scraper.py  state.py
api/: main.py
db/: cache.py  demo_gen.py  urls.py
dealscout/: README.md  config.py  llm.py  run.sh  serve_api.py  serve_ui.py
dealscout/agents/: coordinator.py  graph.py  normalizer.py  ranker.py  scorer.py  scraper.py
dealscout/api/: main.py
dealscout/db/: cache.py  demo_gen.py  geo.py  urls.py
dealscout/docs/: ARCHITECTURE.md  JUDGES.md
dealscout/presentation/: README.md  VIDEO_SCRIPT.md  index.html  styles.css
dealscout/tools/: brightdata_mcp.py
dealscout/ui/: app.py
docs/: JUDGES.md
presentation/: README.md  VIDEO_SCRIPT.md  export-pdf.sh  index.html
tools/: brightdata_mcp.py
ui/: app.py
