[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dealscout"
version = "0.1.0"
description = "LangGraph car deal scout — hackathon demo"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "api*", "db*", "tools*"]

[tool.setuptools.py-modules]
config = "config"
llm = "llm"
